[Feat]: api notification