@@ -1,6 +1,7 @@
 package com._6.ems.mapper;
 
-import com._6.ems.dto.response.NotificationResponse;
+import com._6.ems.dto.response.NotificationAdminResponse;
+import com._6.ems.dto.response.SendNotificationResponse;
 import com._6.ems.entity.Notification;
 import com._6.ems.entity.NotificationRecipient;
 import org.mapstruct.Mapper;
@@ -11,7 +12,6 @@ import java.time.OffsetDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface NotificationMapper {
@@ -19,7 +19,7 @@ public interface NotificationMapper {
     @Mapping(source = "sender.code", target = "sender")
     @Mapping(source = "recipients", target = "receivers", qualifiedByName = "mapRecipientsToEmails")
     @Mapping(source = "sendAt", target = "sendAt", qualifiedByName = "formatDateTime")
-    NotificationResponse toResponse(Notification notification);
+    SendNotificationResponse toResponse(Notification notification);
 
     @Named("formatDateTime")
     static String formatDateTime(OffsetDateTime time) {
@@ -31,6 +31,8 @@ public interface NotificationMapper {
         if (recipients == null) return new ArrayList<>();
         return recipients.stream()
                 .map(r -> r.getId().getRecipientEmail())
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    NotificationAdminResponse toNotificationAdminResponse(Notification notification);
 }
